# domain/requests/comment/create.go
@@ -1,0 +1,19 @@
+package comment
+
+import "github.com/go-playground/validator/v10"
+
+type CreateCommentRequest struct {
+	Message string `json:"message" validate:"required"`
+	PhotoID uint   `json:"photo_id" validate:"required"`
+}
+
+func (c *CreateCommentRequest) Validate() error {
+	validate := validator.New()
+
+	err := validate.Struct(c)
+	if err != nil {
+		return err
+	}
+
+	return nil
+}
